=========================== 1.8.5 ===============================
	
2003-07-02  Gustavo Noronha Silva  <kov@debian.org>

	* (pt_BR, en)
	  Changed version to 1.8.5
	  
	* (all)
	  Fixed the source line for non-US sources on the example
	  configuration from APT.
	  Thanks to "J. Spencer Love" <jsl@LoveSong.Com>

	* (pt_BR, en)
	  You need to install apt-show-versions before using
	  it, is the advice I added on section "apt-show-versions"
	  Thanks to "J. Spencer Love" <jsl@LoveSong.Com>

	* (pt_BR, en)
	  Added Libranet to the section about distributions that
	  support APT.
	  Thanks to Bruce Miller <bruce.miller@ottawa.com>

	* (pt_BR, en)
	  Moved some text from the "install" section to the
	  "default-version" section, where it fits better.
	  Also clarify the specific version installation and
	  change some text that implied testing was better than
	  unstable. (Closes: #180534)

	* (all)
	  Changed the prompt symbol used on the examples
	  of the section about source packages to show
	  '$' instead of '#' where possible on all translations
	  (Closes: #181277)

	* (all)
	  Change 'Priority' to 'Pin-Priority' on all the
	  versions. (Closes: #195270)

	* Starting a ChangeLog for the CVS of apt-howto
