@@ -1,3 +1,9 @@
+2004-12-07  Gustavo Noronha Silva  <kov@debian.org>
+
+	* Makefile:
+	- applied patch from Frank Lichtenheld <djpig@debian.org>
+	  to fix build
+
 =========================== 1.8.5 ===============================
 	
 2003-07-02  Gustavo Noronha Silva  <kov@debian.org>
